<resources>
    <string name="appName">Midori</string>
    <string name="appWebsite">https://www.midori-browser.org</string>
    <string name="userAgentVersion">Midori/6</string>

    <string name="go_back">Go Back</string>
    <string name="actionShare">Share</string>
    <string name="actionClearPrivateData">Clear Private Data</string>
    <string name="actionRequestDesktopSite">Request Desktop site</string>
    <string name="hintSearchOrEnterAddress">Search or enter an address</string>
    <string name="tabs">Tabs</string>
    <string name="download">Download</string>

</resources>
